--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 
 <body>
-  <audio class="song" controls loop>
-        <source src="hbd.mp3"></source>
-	   
+ 
+   <audio loop autoplay>
+       <source src="hbd.mp3"></source>
+	  	   
     </audio>
   <div class="container">
     <div class="one">
