--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Vietnam Women's Day</title>
+  <title>Happy Vietnam Women's Day </title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
- 
-
   <div class="container">
     <div class="one">
       <h1 class="one">
@@ -48,11 +46,12 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/stella.png" alt="" class="lydia-dp" data-node-name="imagePath">
-      <img src="img/hat.svg" alt="" class="hat">
+      <img src="stella.png" alt="" class="lydia-dp" data-node-name="imagePath">
+      <img src="hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Women's Day!</h3>
         <h5 data-node-name="wishText">May James Sullivan always be with you! ;)</h5>
+
       </div>
     </div>
     <div class="seven">
