--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       </p>
     </div>
     <div class="six">
-      <img src="stella.png" alt="" class="lydia-dp" data-node-name="imagePath">
-      <img src="hat.svg" alt="" class="hat">
+      <img src="img/stella.png" alt="" class="lydia-dp" data-node-name="imagePath">
+      <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Women's Day!</h3>
         <h5 data-node-name="wishText">May James Sullivan always be with you! ;)</h5>
