--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <audio src="/hbd.mp3" autoplay></audio>
+  <audio autoplay loop src="hbd.mp3"></audio>
   <div class="container">
     <div class="one">
       <h1 class="one">
