--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-  <audio autoplay loop src="hbd.mp3"></audio>
+  <div class="music">
+    <audio src="hbd.mp3" autoplay loop>
+    </audio>
   <div class="container">
     <div class="one">
       <h1 class="one">
