--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-      <audio src="hbd.mp3" autoplay loop>
+      <audio src="hbd.mp3" >
     </audio>
   <div class="container">
     <div class="one">
