--- a/index.html
+++ b/index.html
@@ -6,21 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Happy Vietnam Women's Day </title>
-  <script>
-        window.addEventListener("DOMContentLoaded", event => {
-  const audio = document.querySelector("audio");
-  audio.volume = 0.2;
-  audio.play();
-});
-    </script>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
-      <audio src="hbd.mp3" >
-    </audio>
+     <embed src="hbd.mp3" loop="true" autostart="true" width="20" height="10">
+        <audio controls autoplay>
+            <source src="hbd.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
   <div class="container">
     <div class="one">
       <h1 class="one">
