--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 </head>
 
 <body>
-     <embed src="hbd.mp3" loop="true" autostart="true" width="20" height="10">
-        <audio controls autoplay>
-            <source src="hbd.mp3" type="audio/mpeg">
+       <audio autoplay>
+            <source src="hbd.mp3" >
             Your browser does not support the audio element.
         </audio>
   <div class="container">
