--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-       <audio autoplay>
+       <audio autoplay loop>
             <source src="hbd.mp3" >
             Your browser does not support the audio element.
         </audio>
